@@ -142,14 +142,8 @@ namespace {
         }
         if (line.find("[TRACK_MODE") != string::npos) {
             string result = parseStrFromLine("TRACK_MODE", line);
-            if (result == "CENTER") {
-                config.track_mode = Config::TRACKING_CENTER;
-            }
-            else if (result == "NONE") {
+            if (result == "NONE") {
                 config.track_mode = Config::TRACKING_NONE;
-            }
-            else if (result == "FOCUS") {
-                config.track_mode = Config::TRACKING_FOCUS;
             }
         }
         if (line.find("[INVERT_MOUSE_Z") != string::npos) {
