@@ -957,9 +957,6 @@ void read_segment( void *arg)
             firstLoad = 0;
             if (stonesenseState.ssConfig.config.track_mode == Config::TRACKING_CENTER) {
                 followCurrentDFCenter();
-            } else if (stonesenseState.ssConfig.config.track_mode == Config::TRACKING_FOCUS) {
-                followCurrentDFFocus();
-                stonesenseState.ssConfig.config.follow_DFcursor = true;
             }
             stonesenseState.ssConfig.zoom = (df::global::gps->viewport_zoom_factor - 64) / 16;
             stonesenseState.ssConfig.recalculateScale();
